<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0000ff"
    >
<!--     -->
    <LinearLayout
        android:id="@+id/id_xinwen"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/id_xinwen_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/newscenter2"
            android:clickable="false"
            />
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            />
    </LinearLayout>
    <LinearLayout
        android:clickable="false"
        android:id="@+id/id_video"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <ImageView
            android:clickable="false"
            android:id="@+id/id_video_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/govaffairs2"

            />
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_setting"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <ImageView
            android:clickable="false"
            android:id="@+id/id_setting_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setting2"

            />
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            />
    </LinearLayout>
</LinearLayout>