<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33330000"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ccffffff"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/id_close"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/umeng_update_close_bg_normal"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center|right"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="第三方登录"
            android:textSize="25sp"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center|right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="注册"
            android:textSize="25sp"
            android:id="@+id/id_zhuce"
            />
    </LinearLayout>

        <TextView
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="手机号"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:counterOverflowTextAppearance="@style/MyOverflowText"
            app:errorTextAppearance="@style/MyErrorStyle">
            <EditText
                android:id="@+id/id_phone_number"
                android:layout_marginLeft="10dp"
                android:background="@drawable/user_bg"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="30dp"
                android:hint="请输入手机号 11位"
                />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="30dp"
            android:text="验证码"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            app:counterOverflowTextAppearance="@style/MyOverflowText"
            app:errorTextAppearance="@style/MyErrorStyle">
            <EditText
                android:layout_gravity="center_vertical"
                android:id="@+id/id_yanzhengma"
                android:layout_marginLeft="10dp"
                android:background="@drawable/user_bg"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:inputType="number"
                android:hint="@string/yanzhengma"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:id="@+id/id_get_message"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/huoquyanzhengma"
            android:background="#FFFFFF"
            />
    <TextView
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/time"
        android:gravity="center"
        android:text="时间"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/id_denglu"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/denglu"
        android:gravity="center"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:background="@drawable/login_bg"
        />
    <include layout="@layout/bottom_login"/>

</LinearLayout>